--- a/TouristGreenbook/TGB.WebAPI/Views/AdminTrips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminTrips/Index.cshtml
@@ -9,10 +9,10 @@
 <h2>Trip</h2>
 
 <form method="get" class="form-inline">
-    <input name="filter" class="form-control" placeholder="filter"
+    <input name="filter" class="form-control" placeholder="city"
            value="@Model.RouteValue["Filter"]" />
     <button type="submit" class="btn btn-info">
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search by City
+        <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
     </button>
 </form>
 
