--- a/TouristGreenbook/TGB.WebAPI/Views/Home/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Home/Index.cshtml
@@ -10,3 +10,56 @@
 <li>by their rating</li>
 <li>Planning you budget</li>
 <li></li>
+
+<style>
+    #map, #map_canvas {
+        width: 1000px;
+        height: 500px;
+    }
+</style>
+
+<div id="map"></div>
+<script type="text/javascript">
+
+    var map;
+    var service;
+    var infowindow;
+
+    function initialize() {
+        var lviv = new google.maps.LatLng(49.8382600, 24.0232400);
+
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: lviv,
+            zoom: 15
+        });
+
+        var request = {
+            location: lviv,
+            radius: '500',
+            type: ['cafe']
+        };
+
+        service = new google.maps.places.PlacesService(map);
+        service.nearbySearch(request, callback);
+    }
+
+    function callback(results, status) {
+        if (status == google.maps.places.PlacesServiceStatus.OK) {
+            for (var i = 0; i < results.length; i++) {
+                var place = results[i];
+                createMarker(results[i]);
+            }
+        }
+    }
+
+    function createMarker(place) {
+        var marker = new google.maps.Marker({
+            map: map,
+            position: place.geometry.location
+        });
+    }
+</script>
+
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initialize">
+</script>
