--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
@@ -3,10 +3,10 @@
 @*TripWithPlaces*@
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Your saved trips";
 }
 
-<h2>Index</h2>
+<h2>Your saved trips</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
