--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Edit.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Edit.cshtml
@@ -153,7 +153,8 @@
     </div>
 
     <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-default" onsubmit="getCheckedPlaces()" />
+        @*<input type="submit" value="Save" class="btn btn-default" onsubmit="getCheckedPlaces()" />*@
+        <button class="btn btn-default" type="submit" value="Save" name="submit" onsubmit="getCheckedPlaces();">Save</button>
     </div>
 </div>
 
@@ -225,7 +226,8 @@
     </table>
 
     <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-default" onsubmit="getCheckedPlaces()" />
+        @*<input type="submit" value="Save" class="btn btn-default" onsubmit="getCheckedPlaces()" />*@
+        <button class="btn btn-default" type="submit" value="Save" name="submit" onsubmit="getCheckedPlaces();">Save</button>
     </div>
 
     <div>
