--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Details.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Details.cshtml
@@ -34,12 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.Budget)
         </dd>
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.Places)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Places)
-        </dd>
+            @Html.DisplayFor(model => model.Places.Count)
+        </dd>*@
     </dl>
 </div>
 <div>
