--- a/TouristGreenbook/TGB.WebAPI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -6,7 +6,7 @@
 
 <div>
     <h4>Change your account settings</h4>
-    <hr />
+    <br />
     <div class="row">
         <div class="col-md-3">
             <partial name="_ManageNav" />
@@ -21,7 +21,7 @@
     if (User.IsInRole("Admin"))
     {
         <div>
-            <a asp-controller="Home" asp-action="AdminView">Back to List</a>
+            <a asp-controller="Home" asp-action="AdminView" class="btn btn-default">Back to List</a>
         </div>
     }
 }
