--- a/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Create.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 <h4>Place</h4>
-<hr />
+<br />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -62,13 +62,13 @@
                 <select asp-for="TripId" class ="form-control" asp-items="ViewBag.TripId"></select>
             </div>*@
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
 
