--- a/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Edit.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 <h4>Place</h4>
-<hr />
+<br />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -64,13 +64,16 @@
                 <span asp-validation-for="TripId" class="text-danger"></span>
             </div>*@
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
+            </div>
+            <div>
+                <a asp-action="Index" class="btn btn-default">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    
 </div>
 
