--- a/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Index.cshtml
@@ -8,6 +8,10 @@
 
 <h2>Place</h2>
 
+<p>
+    <a asp-area="" asp-controller="AddPlace" asp-action="AddingNewPlaceFromUser" class="btn btn-primary">Create new</a>
+</p>
+
 <form method="get" class="form-inline">
     <input name="filterName" class="form-control" placeholder="name"
            value="@Model.RouteValue["Filter"]" />
@@ -25,12 +29,10 @@
 <nav aria-label="Suppliers navigation example">
     @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
 </nav>
-<p>
-    <a asp-area="" asp-controller="AddPlace" asp-action="AddingNewPlaceFromUser">Create new</a>
-</p>
-<table class="table table-striped">
+
+<table class="table">
     <thead>
-        <tr>
+        <tr class="active">
             <th>
                 @Html.SortableHeaderFor(model => model.Name, "Name", this.Model)
             </th>
@@ -59,12 +61,12 @@
                 @Html.SortableHeaderFor(model => model.Rating, "Rating", this.Model)
             </th>
             <th></th>
-        </tr>
+            </trclass="active">
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="active">
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
@@ -93,8 +95,8 @@
                     @Html.DisplayFor(modelItem => item.Rating)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
@@ -106,5 +108,5 @@
 </nav>
 
 <div>
-    <a asp-controller="Home" asp-action="AdminView">Back to List</a>
+    <a asp-controller="Home" asp-action="AdminView" class="btn btn-default">Back to List</a>
 </div>
