--- a/TouristGreenbook/TGB.WebAPI/Views/AdminTrips/Delete.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminTrips/Delete.cshtml
@@ -9,7 +9,7 @@
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Trip</h4>
-    <hr />
+    <br />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.City)
@@ -45,7 +45,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-default">Back to List</a>
     </form>
 </div>
