--- a/TouristGreenbook/TGB.WebAPI/Views/AdminTrips/Details.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminTrips/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <h4>Trip</h4>
-    <hr />
+    <br />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.City)
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a> |
+    <a asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
