--- a/TouristGreenbook/TGB.WebAPI/Views/AdminTrips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminTrips/Index.cshtml
@@ -20,9 +20,9 @@
     @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
 </nav>
 
-<table class="table table-striped">
+<table class="table">
     <thead>
-        <tr>
+        <tr class="active">
             <th>
                 @Html.SortableHeaderFor(model => model.City, "City", this.Model)
             </th>
@@ -44,7 +44,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="active">
                 <td>
                     @Html.DisplayFor(modelItem => item.City)
                 </td>
@@ -61,8 +61,8 @@
                     @Html.DisplayFor(modelItem => item.ConcreteUserId)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
@@ -73,5 +73,5 @@
 </nav>
 
 <div>
-    <a asp-controller="Home" asp-action="AdminView">Back to List</a>
+    <a asp-controller="Home" asp-action="AdminView" class="btn btn-default">Back to List</a>
 </div>
