--- a/TouristGreenbook/TGB.WebAPI/Views/Home/AdminView.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Home/AdminView.cshtml
@@ -7,9 +7,9 @@
 
 @if (User.IsInRole("Admin"))
 {
-    <h4><a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage your account</a></h4>
-    <h4><a asp-area="" asp-controller="Role" asp-action="Index">Manage Roles</a></h4>
-    <h4><a asp-area="" asp-controller="Users" asp-action="Index">Manage Users</a></h4>
-    <h4><a asp-area="" asp-controller="AdminPlaces" asp-action="Index">Manage Places</a></h4>
-    <h4><a asp-area="" asp-controller="AdminTrips" asp-action="Index">Manage Trips</a></h4>
+    <h4><a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="btn btn-primary">Manage your account</a></h4>
+    <h4><a asp-area="" asp-controller="Role" asp-action="Index" class="btn btn-primary">Manage Roles</a></h4>
+    <h4><a asp-area="" asp-controller="Users" asp-action="Index" class="btn btn-primary">Manage Users</a></h4>
+    <h4><a asp-area="" asp-controller="AdminPlaces" asp-action="Index" class="btn btn-primary">Manage Places</a></h4>
+    <h4><a asp-area="" asp-controller="AdminTrips" asp-action="Index" class="btn btn-primary">Manage Trips</a></h4>
 }
