--- a/TouristGreenbook/TGB.WebAPI/Views/Role/Create.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Role/Create.cshtml
@@ -6,7 +6,7 @@
 <h2>Create</h2>
 
 <h4>Role</h4>
-<hr />
+<br />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -17,14 +17,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
 
 @section Scripts {
