--- a/TouristGreenbook/TGB.WebAPI/Views/Role/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Role/Index.cshtml
@@ -8,6 +8,10 @@
 
 <h2>Roles</h2>
 
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+</p>
+
 <form method="get" class="form-inline">
     <input name="filter" class="form-control" placeholder="name"
            value="@Model.RouteValue["Filter"]" />
@@ -19,13 +23,10 @@
 <nav aria-label="Suppliers navigation example">
     @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
 </nav>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table table-striped">
+<br />
+<table class="table">
     <thead>
-        <tr>
+        <tr class="active">
             <th>
                 @Html.SortableHeaderFor(model => model.Name, "Name", this.Model)
             </th>
@@ -35,12 +36,12 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="active">
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
@@ -51,5 +52,5 @@
 </nav>
 
 <div>
-    <a asp-controller="Home" asp-action="AdminView">Back to List</a>
+    <a asp-controller="Home" asp-action="AdminView" class="btn btn-default">Back to List</a>
 </div>
