--- a/TouristGreenbook/TGB.WebAPI/Views/Users/Edit.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Users/Edit.cshtml
@@ -8,7 +8,7 @@
 <h2>Edit</h2>
 
 <h4>User @Model.UserEmail</h4>
-<hr />
+<br />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" method="post">
@@ -22,14 +22,14 @@
                     }
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
 
 @section Scripts {
