--- a/TouristGreenbook/TGB.WebAPI/Views/Users/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Users/Index.cshtml
@@ -22,9 +22,9 @@
     @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
 </nav>
 
-<table class="table table-striped">
+<table class="table">
     <thead>
-        <tr>
+        <tr class="active">
             <th>
                 @Html.SortableHeaderFor(model => model.UserName, "UserName", this.Model)
             </th>
@@ -40,7 +40,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="active">
                 <td>
                     @Html.DisplayFor(modelItem => item.UserName)
                 </td>
@@ -51,11 +51,10 @@
                     @Html.DisplayFor(modelItem => item.PhoneNumber)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit Role</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit Role</a> |
                     @if (item.UserName != User.Identity.Name)
                     {
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                     }
                 </td>
             </tr>
@@ -68,5 +67,5 @@
 </nav>
 
 <div>
-    <a asp-controller="Home" asp-action="AdminView">Back to List</a>
+    <a asp-controller="Home" asp-action="AdminView" class="btn btn-default">Back to List</a>
 </div>
