--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Your saved trips</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table id="table_trips" class="table table-striped table-hover table-condensed">
     <thead>
@@ -61,9 +61,9 @@
                     };
                     trp.Places.AddRange(Model.Places.Where(pl => pl.Trip!=null && pl.Trip.Id == trip.Id));
                 }
-                <a asp-action="Edit" asp-route-id="@trip.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@trip.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@trip.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@trip.Id" class="btn btn-warning">Edit</a> |
+                <a asp-action="Details" asp-route-id="@trip.Id" class="btn btn-info">Details</a> |
+                <a asp-action="Delete" asp-route-id="@trip.Id" class="btn btn-danger">Delete</a>
             </td>
         </tr>
         }
