--- a/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Edit.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Edit.cshtml
@@ -44,17 +44,17 @@
                 <span asp-validation-for="WorkTimeFinish" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="State" class="control-label"></label>
+                <label asp-for="State" class="control-label"style="color:white"></label>
                 <select asp-for="State" asp-items="Html.GetEnumSelectList<PlaceState>()" class="form-control"></select>
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="control-label"style="color:white"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Rating" class="control-label"></label>
+                <label asp-for="Rating" class="control-label" style="color:white"></label>
                 <input asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
